Correct truncation of In This Article links in right sidebar

--- a/templates/dnn-docs/styles/docfx.css
+++ b/templates/dnn-docs/styles/docfx.css
@@ -667,7 +667,7 @@ body .toc{
   overflow: hidden;
   padding-bottom: 10px;
   height: calc(100% - 100px);
-  margin-right: -20px;
+  /*margin-right: -20px;*/
 }
 .affix ul > li > a:before {
   color: #cccccc;
